--- a/backend/package.json
+++ b/backend/package.json
@@ -9,19 +9,24 @@
     "migrate": "node src/utils/migrate.js",
     "seed": "node src/utils/seed.js"
   },
-  "keywords": ["saas", "task-management", "multi-tenant"],
+  "keywords": [
+    "saas",
+    "task-management",
+    "multi-tenant"
+  ],
   "author": "TaskFlow Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "morgan": "^1.10.0"
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.11.3",
+    "serverless-http": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
