--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "taskflow-frontend",
+  "name": "nottu-frontend",
   "version": "1.0.0",
-  "description": "TaskFlow SaaS Frontend",
+  "description": "NOTTU - Note-taking SaaS Frontend",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "axios": "^1.6.2",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^14.4.3"
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
