--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,33 +6,34 @@ services:
     image: postgres:14-alpine
     container_name: nottu-postgres-dev
     environment:
-      POSTGRES_DB: taskflow_db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres123
+      POSTGRES_DB: ${DB_NAME:-kowan}
+      POSTGRES_USER: ${DB_USER:-mirana}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-ambasing}
     volumes:
       - postgres_dev_data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "${DB_PORT:-5432}:5432"
     networks:
       - nottu-dev-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-mirana}"]
       interval: 10s
       timeout: 5s
       retries: 5
+    restart: unless-stopped
 
   # MinIO Object Storage
   minio:
     image: minio/minio:latest
     container_name: nottu-minio-dev
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_ROOT_USER: ${MINIO_ACCESS_KEY:-minioadmin}
+      MINIO_ROOT_PASSWORD: ${MINIO_SECRET_KEY:-minioadmin}
     volumes:
       - minio_dev_data:/data
     ports:
-      - "9000:9000"
-      - "9001:9001"
+      - "${MINIO_PORT:-9000}:9000"
+      - "${MINIO_CONSOLE_PORT:-9001}:9001"
     networks:
       - nottu-dev-network
     command: server /data --console-address ":9001"
@@ -41,6 +42,7 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
+    restart: unless-stopped
 
 volumes:
   postgres_dev_data:
