--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,58 @@
-# Dependencies
+# Dependencies and build artifacts
 node_modules/
 */node_modules/
-
-# Environment variables
-.env
-.env.local
-.env.production
-.env.development
-
-# Build outputs
-build/
+coverage/
 dist/
-*/build/
 */dist/
+build/
+*/build/
+.cache/
+.parcel-cache/
+.next/
+.nuxt/
+out/
+.svelte-kit/
+.vercel/
+.serverless/
+.functions/
+.turbo/
+.vite/
+tmp/
+temp/
 
 # Logs
 logs/
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# IDE
-.vscode/
-.idea/
-*.swp
+pnpm-debug.log*
+*.log
+*.pid
 *.swo
 *~
+
+# Environment and secrets
+.env
+.env.*
+!.env.example
+.env.local
+.env.development
+.env.production
 
 # Database
 *.db
 *.sqlite
 
+# Editor and OS files
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.swp
+
 # Docker
 docker-compose.override.yml
 
-# Production
+# Production outputs
 /frontend/build
 /backend/dist
