--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
   "author": "NOTTU Team",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.948.0",
+    "@aws-sdk/s3-request-presigner": "^3.948.0",
     "@simplewebauthn/server": "^13.2.2",
     "@simplewebauthn/types": "^12.0.0",
     "bcryptjs": "^2.4.3",
