--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,6 @@
 version: '3.8'
 
 services:
-  # PostgreSQL Database
   postgres:
     image: postgres:14-alpine
     container_name: nottu-postgres-prod
@@ -20,26 +19,6 @@ services:
       retries: 5
     restart: always
 
-  # MinIO Object Storage
-  minio:
-    image: minio/minio:latest
-    container_name: nottu-minio-prod
-    environment:
-      MINIO_ROOT_USER: ${MINIO_ACCESS_KEY}
-      MINIO_ROOT_PASSWORD: ${MINIO_SECRET_KEY}
-    volumes:
-      - minio_prod_data:/data
-    networks:
-      - nottu-prod-network
-    command: server /data --console-address ":9001"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
-    restart: always
-
-  # Backend API
   backend:
     build:
       context: ./backend
@@ -52,26 +31,22 @@ services:
       JWT_SECRET: ${JWT_SECRET}
       JWT_EXPIRE: ${JWT_EXPIRE:-7d}
       CORS_ORIGIN: ${CORS_ORIGIN}
-      MINIO_ENDPOINT: minio
-      MINIO_PORT: 9000
-      MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
-      MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
-      MINIO_BUCKET: ${MINIO_BUCKET:-nottu-profiles}
-      MINIO_USE_SSL: ${MINIO_USE_SSL:-false}
+      AWS_REGION: ${AWS_REGION}
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      AWS_SESSION_TOKEN: ${AWS_SESSION_TOKEN}
+      AWS_S3_BUCKET: ${AWS_S3_BUCKET}
       RP_NAME: ${RP_NAME:-NOTTU}
       RP_ID: ${RP_ID}
       ORIGIN: ${ORIGIN}
     depends_on:
       postgres:
         condition: service_healthy
-      minio:
-        condition: service_healthy
     networks:
       - nottu-prod-network
     restart: always
     command: sh -c "sleep 10 && node src/utils/migrate.js && npm start"
 
-  # Frontend
   frontend:
     build:
       context: ./frontend
@@ -87,7 +62,6 @@ services:
       - nottu-prod-network
     restart: always
 
-  # Nginx Reverse Proxy
   nginx:
     image: nginx:alpine
     container_name: nottu-nginx-prod
@@ -106,8 +80,6 @@ services:
 
 volumes:
   postgres_prod_data:
-    driver: local
-  minio_prod_data:
     driver: local
 
 networks:
