--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -67,10 +67,8 @@ services:
     container_name: nottu-nginx-prod
     ports:
       - "80:80"
-      - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - backend
       - frontend
