--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,12 @@ DB_PORT=5432
 JWT_SECRET=STRONG-JWT-SECRET
 JWT_EXPIRE=7d
 
-CORS_ORIGIN=http://localhost:3000
-REACT_APP_API_URL=http://localhost:5000/api
+CORS_ORIGIN=http://localhost
+REACT_APP_API_URL=/api
 
 RP_NAME=NOTTU
+ORIGIN=http://localhost
 RP_ID=localhost
-ORIGIN=http://localhost:3000
 
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=ASIA...
