--- a/nginx.conf
+++ b/nginx.conf
@@ -36,7 +36,7 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
 
         location /api/ {
-            proxy_pass http://backend_api$request_uri;
+            proxy_pass http://backend_api/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
