--- a/nginx.conf
+++ b/nginx.conf
@@ -20,11 +20,11 @@ http {
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
 
     upstream frontend_app {
-        server nottu-frontend-prod:80;
+        server frontend:80;
     }
 
     upstream backend_api {
-        server nottu-backend-prod:5000;
+        server backend:5000;
     }
 
     server {
