--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,10 +15,69 @@ services:
     networks:
       - nottu-dev-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-mirana}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-mirana} -d ${DB_NAME:-kowan}"]
       interval: 10s
       timeout: 5s
       retries: 5
+    restart: unless-stopped
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    environment:
+      NODE_ENV: development
+      PORT: 5000
+      DATABASE_URL: postgresql://${DB_USER:-mirana}:${DB_PASSWORD:-ambasing}@postgres:5432/${DB_NAME:-kowan}
+      JWT_SECRET: ${JWT_SECRET:-dev-secret}
+      JWT_EXPIRE: ${JWT_EXPIRE:-7d}
+      CORS_ORIGIN: ${CORS_ORIGIN:-http://localhost:3000}
+      AWS_REGION: ${AWS_REGION}
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      AWS_SESSION_TOKEN: ${AWS_SESSION_TOKEN}
+      AWS_S3_BUCKET: ${AWS_S3_BUCKET}
+      RP_NAME: ${RP_NAME:-NOTTU}
+      RP_ID: ${RP_ID:-localhost}
+      ORIGIN: ${ORIGIN:-http://localhost:3000}
+    depends_on:
+      postgres:
+        condition: service_healthy
+    ports:
+      - "5000:5000"
+    networks:
+      - nottu-dev-network
+    restart: unless-stopped
+    command: sh -c "npm run migrate && npm start"
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+      args:
+        REACT_APP_API_URL: ${REACT_APP_API_URL:-http://localhost:5000/api}
+    environment:
+      REACT_APP_API_URL: ${REACT_APP_API_URL:-http://localhost:5000/api}
+    ports:
+      - "3000:80"
+    depends_on:
+      - backend
+    networks:
+      - nottu-dev-network
+    restart: unless-stopped
+
+  nginx:
+    image: nginx:alpine
+    container_name: nottu-nginx-dev
+    ports:
+      - "8080:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - backend
+      - frontend
+    networks:
+      - nottu-dev-network
     restart: unless-stopped
 
 volumes:
