--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nottu-backend",
+  "name": "pastebin-backend",
   "version": "1.0.0",
-  "description": "NOTTU - Note-taking SaaS Backend API",
+  "description": "PASTEBIN - Note-taking SaaS Backend API",
   "main": "src/server.js",
   "engines": {
     "node": ">=22.0.0"
@@ -20,7 +20,7 @@
     "notepad",
     "note-taking"
   ],
-  "author": "NOTTU Team",
+  "author": "PASTEBIN Team",
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.948.0",
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
+    "nanoid": "^5.1.6",
     "pg": "^8.13.1"
   },
   "devDependencies": {
