--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DB_NAME=kowan
+DB_NAME=pastebin-kowan
 DB_USER=postgres
 DB_PASSWORD=STRONG-DB-PASSWORD
 DB_PORT=5432
@@ -9,7 +9,7 @@ JWT_EXPIRE=7d
 CORS_ORIGIN=http://localhost
 REACT_APP_API_URL=/api
 
-RP_NAME=NOTTU
+RP_NAME=PASTEBIN
 ORIGIN=http://localhost
 RP_ID=localhost
 
