--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,15 +3,15 @@ version: '3.8'
 services:
   postgres:
     image: postgres:14-alpine
-    container_name: nottu-postgres-prod
+    container_name: pastebin-postgres-prod
     environment:
-      POSTGRES_DB: ${DB_NAME:-kowan}
+      POSTGRES_DB: ${DB_NAME:-pastebin-kowan}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - postgres_prod_data:/var/lib/postgresql/data
     networks:
-      - nottu-prod-network
+      - pastebin-prod-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
       interval: 10s
@@ -23,7 +23,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: nottu-backend-prod
+    container_name: pastebin-backend-prod
     environment:
       NODE_ENV: production
       PORT: 5000
@@ -36,14 +36,14 @@ services:
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
       AWS_SESSION_TOKEN: ${AWS_SESSION_TOKEN}
       AWS_S3_BUCKET: ${AWS_S3_BUCKET}
-      RP_NAME: ${RP_NAME:-NOTTU}
+      RP_NAME: ${RP_NAME:-PASTEBIN}
       RP_ID: ${RP_ID}
       ORIGIN: ${ORIGIN:-http://localhost}
     depends_on:
       postgres:
         condition: service_healthy
     networks:
-      - nottu-prod-network
+      - pastebin-prod-network
     restart: always
     command: sh -c "sleep 10 && node src/utils/migrate.js && npm start"
 
@@ -53,18 +53,18 @@ services:
       dockerfile: Dockerfile
       args:
         REACT_APP_API_URL: ${REACT_APP_API_URL}
-    container_name: nottu-frontend-prod
+    container_name: pastebin-frontend-prod
     environment:
       REACT_APP_API_URL: ${REACT_APP_API_URL}
     depends_on:
       - backend
     networks:
-      - nottu-prod-network
+      - pastebin-prod-network
     restart: always
 
   nginx:
     image: nginx:alpine
-    container_name: nottu-nginx-prod
+    container_name: pastebin-nginx-prod
     ports:
       - "80:80"
     volumes:
@@ -73,7 +73,7 @@ services:
       - backend
       - frontend
     networks:
-      - nottu-prod-network
+      - pastebin-prod-network
     restart: always
 
 volumes:
@@ -81,5 +81,5 @@ volumes:
     driver: local
 
 networks:
-  nottu-prod-network:
+  pastebin-prod-network:
     driver: bridge
