feat: implement private pass in pastebin

--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@aws-sdk/client-s3": "^3.948.0",
     "@aws-sdk/s3-request-presigner": "^3.948.0",
     "@simplewebauthn/server": "^13.2.2",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
