--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "NOTTU",
-  "name": "NOTTU - Note Taking SaaS",
+  "short_name": "QuickClip",
+  "name": "QuickClip - Note Taking SaaS",
   "icons": [
     {
       "src": "favicon.ico",
