--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pastebin-backend",
+  "name": "quickclip-backend",
   "version": "1.0.0",
-  "description": "PASTEBIN - Note-taking SaaS Backend API",
+  "description": "QUICKCLIP - Note-taking SaaS Backend API",
   "main": "src/server.js",
   "engines": {
     "node": ">=22.0.0"
@@ -20,7 +20,7 @@
     "notepad",
     "note-taking"
   ],
-  "author": "PASTEBIN Team",
+  "author": "QUICKCLIP Team",
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.948.0",
