--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,8 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    client_max_body_size 10m;
+
     sendfile        on;
     keepalive_timeout  65;
     gzip on;
